--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:gravity="center"
+	android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+	<ProgressBar
+		android:layout_height="wrap_content"
+		style="?android:attr/progressBarStyleLarge"
+		android:layout_width="wrap_content"
+		android:background="@drawable/updater"
+		android:layout_marginTop="20dp"/>
+
+	<TextView
+		android:layout_height="wrap_content"
+		android:text="@string/hint"
+		android:textAppearance="?android:attr/textAppearanceLarge"
+		android:layout_width="wrap_content"
+		android:textSize="32sp"
+		android:layout_marginTop="0dp"/>
+
+	<ScrollView
+		android:layout_height="1000dp"
+		android:layout_width="match_parent"
+		android:layout_marginTop="30dp">
+
+		<LinearLayout
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:gravity="center"
+			android:orientation="vertical">
+
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:text="@string/license"/>
+
+			<ImageView
+				android:layout_height="520dp"
+				android:text="Text"
+				android:layout_width="520dp"
+				android:background="@drawable/netxia"
+				android:layout_gravity="center_horizontal"
+				android:layout_marginTop="50dp"
+				android:layout_marginBottom="50dp"/>
+
+			<Button
+				android:layout_height="wrap_content"
+				android:text="@string/agree"
+				android:layout_width="wrap_content"
+				android:id="@+id/Button1"
+				android:layout_marginBottom="30dp"/>
+
+		</LinearLayout>
+
+	</ScrollView>
 
 </LinearLayout>
+
